# roma-timer

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  CLAUDE.md  DOCKER_VARIANTS.md  Dockerfile  Dockerfile.postgres  Makefile  README.md  README_SIMPLE.md  RELEASE.md  SPEC.md  docker-compose.postgres.yml  docker-compose.sqlite.yml  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .clippy.toml  Cargo.toml  README_DATABASE.md  build.rs  clippy.toml  simple_Cargo.toml
backend/examples/: config_with_database.rs  database_selection.rs
backend/migrations/: 001_initial.sql  002_session_reset.sql
backend/src/: config.rs  database.rs  error.rs  logging.rs  main.rs  service_integration_test.rs
backend/src/api/: configuration.rs  mod.rs  timer.rs
backend/src/database/: connection.rs  daily_reset.rs  daily_reset_extensions.rs  mod.rs  types.rs
backend/src/models/: daily_session_stats.rs  device_connection.rs  mod.rs  notification_event.rs  scheduled_task.rs  session_reset_event.rs  timer_session.rs  user_configuration.rs  websocket_messages.rs
backend/src/services/: configuration_service.rs  daily_reset_logging.rs  daily_reset_service.rs  daily_reset_service_complex.rs  daily_reset_task_handler.rs  mod.rs  scheduling_service.rs  time_provider.rs  timer_service.rs  timezone_service.rs  websocket_service.rs
backend/src/websocket/: messages.rs  mod.rs
backend/src/websocket/handlers/: analytics.rs  daily_reset.rs  mod.rs  session_count.rs
backend/tests/integration/: daily_reset_integration_utils.rs  mod.rs  session_count_websocket_tests.rs  session_reset_api_tests.rs  session_sync_tests.rs  test_config_api.rs  test_multi_device.rs  test_timer_api.rs  test_websocket_sync.rs  timezone_reset_tests.rs
backend/tests/unit/: daily_reset_service_tests.rs  daily_reset_test_utils.rs  mod.rs  scheduling_service_tests.rs  session_count_tests.rs  session_override_tests.rs  test_timer_service.rs  test_timer_session.rs  test_user_configuration.rs  test_user_configuration_simple.rs  timezone_service_tests.rs
frontend/: .eslintignore  .eslintrc.js  app.json  index.html  jest.config.js  jest.setup.js  manifest.json  metro.config.js  package.json  script.js  styles.css  sw.js  tsconfig.json
frontend/src/__tests__/e2e/: config-flow.test.ts  sync-flow.test.ts  timer-flow.test.ts
frontend/src/components/DailyResetConfig/: DailyResetConfig.tsx  index.ts
frontend/src/components/Settings/: DurationSettings.tsx  GeneralSettings.tsx  NotificationSettings.tsx
frontend/src/components/Settings/__tests__/: Settings.test.tsx
frontend/src/components/TimerControls/: TimerControls.tsx
frontend/src/components/TimerControls/__tests__/: TimerControls.test.tsx
frontend/src/components/TimerDisplay/: TimerDisplay.tsx
frontend/src/components/TimerDisplay/__tests__/: TimerDisplay.test.tsx
frontend/src/components/TimezonePicker/: TimezonePicker.tsx  index.ts
frontend/src/hooks/: useConfiguration.ts  useDailyReset.ts  useTimer.ts  useWebSocket.ts
frontend/src/pages/: SettingsScreen.tsx  TimerScreen.tsx
frontend/src/services/: api.ts  dailyResetWebSocket.ts  websocket.ts
frontend/src/services/__tests__/: websocket.test.ts
frontend/src/types/: index.ts
specs/001-pomodoro-timer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pomodoro-timer/checklists/: requirements.md
specs/001-pomodoro-timer/contracts/: openapi.yaml  websocket-messages.yaml
specs/002-session-reset/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-session-reset/checklists/: requirements.md
specs/002-session-reset/contracts/: api.yaml  websocket.yaml
