[package]
name = "roma-timer"
version = "0.1.0"
edition = "2021"
description = "A simple and beautiful Pomodoro timer web application"
rust-version = "1.83"

[[bin]]
name = "roma-timer"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
headers = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Timezone support and scheduling
chrono-tz = "0.8"
tokio-cron-scheduler = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regular expressions for validation
regex = "1.10"

# Fix for edition2024 compatibility issues - pin home crate
home = "=0.5.9"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database support with conditional features
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "chrono", "uuid", "macros"] }

# SQLite support (default)
sqlx-sqlite = { version = "0.7", optional = true }

# PostgreSQL support (optional)
sqlx-postgres = { version = "0.7", optional = true }

# Include directory for PWA embedding
include_dir = "0.7"

# Authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# HTTP client for webhooks
reqwest = { version = "0.11", features = ["json"] }

# Random number generation
rand = "0.8"

# URL parsing
url = "2.5"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite", "sqlx-sqlite"]
postgres = ["sqlx/postgres", "sqlx-postgres"]

[dev-dependencies]
axum-test = "15.0"

# Time mocking for testing
mocktime = "0.11"

# Clippy configuration for zero-warning policy
[lints.clippy]
all = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
correctness = "warn"
suspicious = "warn"
pedantic = "warn"
# Allow certain items in tests
expect-used = { level = "allow", check = "tests" }
unwrap-used = { level = "allow", check = "tests" }
dbg-macro = { level = "allow", check = "tests" }

# Authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# HTTP client for webhooks
reqwest = { version = "0.11", features = ["json"] }

# Random number generation
rand = "0.8"

# URL parsing for WebSocket query parameters
url = "2.5"

# Error handling
thiserror = "1.0"